<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_view"
        android:fontFamily="monospace"
        android:text="@string/cancel_btn"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="379dp"
        android:layout_height="401dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancelBtn">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B6ACAC"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="86dp">

            <LinearLayout
                android:id="@+id/person_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:fontFamily="monospace"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/main_title_name"
                    android:textSize="34sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/drawLot"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/button_view"
        android:fontFamily="monospace"
        android:text="@string/draw_lot"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addApplicant"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/button_view"
        android:fontFamily="monospace"
        android:text="@string/add_user"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
