<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".view.EnteranceActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="321dp"
        android:layout_height="114dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/title_view"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/title_name"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="291dp"
        android:layout_height="264dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/motto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ticket" />

    <TextView
        android:id="@+id/motto"
        android:layout_width="290dp"
        android:layout_height="98dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/motto"
        android:textAlignment="center"
        android:textColor="#E6E6E6"
        android:textColorLink="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/my_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/my_button"
        android:layout_width="261dp"
        android:layout_height="74dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/button_view"
        android:fontFamily="monospace"
        android:text="@string/enterance_btn"
        android:textColor="#E6E6E6"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>